# klippa-rust-services

./: Cargo.toml  Makefile  README.md
libs/common/: Cargo.toml
libs/messaging/: Cargo.toml
services/audit/: Cargo.toml
services/booking/: Cargo.toml
services/chat/: Cargo.toml
services/file-media/: Cargo.toml
services/payment/: Cargo.toml
