
[workspace]
members = [
    "services/booking",
    "services/payment",
    "services/file-media",
    "services/chat", "services/audit",
    "libs/common", 
    "libs/config", "libs/telemetry", "libs/messaging", "libs/db", "libs/domain", "libs/error",
]
resolver = "3"

[workspace.package]

version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
